force-app/main/default/objects/Case__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>コメント</label>
    <type>TextArea</type>
</CustomField>