force-app/main/default/objects/Case__c/fields/Complaint_Detail__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Detail__c</fullName>
    <description>山本</description>
    <label>クレーム詳細</label>
    <type>TextArea</type>
</CustomField>