force-app/main/default/objects/Case__c/fields/ComplaintType__c.field-meta.xml
<CustomField>
    <fullName>ComplaintType__c</fullName>
    <description>山本</description>
    <label>クレーム種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>応対（説明）</fullName>
            </value>
            <value>
                <fullName>応対（接遇）</fullName>
            </value>
            <value>
                <fullName>応対（C）</fullName>
            </value>
            <value>
                <fullName>引取（はなまる）</fullName>
            </value>
            <value>
                <fullName>引取（他社）</fullName>
            </value>
            <value>
                <fullName>振込・金額</fullName>
            </value>
            <value>
                <fullName>書類</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>