force-app/main/default/objects/Case__c/fields/ContactCount__c.field-meta.xml
<CustomField>
    <fullName>ContactCount__c</fullName>
    <formula>IF ( ISBLANK( ContactDate__c ), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>接触カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>