force-app/main/default/objects/Case__c/fields/ContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContactDate__c</fullName>
    <label>接触日</label>
    <type>Date</type>
</CustomField>