force-app/main/default/objects/Case__c/fields/Contract_explainer__c.field-meta.xml
<CustomField>
    <fullName>Contract_explainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約説明担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_User_ContractExplainer</relationshipName>
    <type>Lookup</type>
</CustomField>