force-app/main/default/objects/Case__c/fields/contract_insurance__c.field-meta.xml
<CustomField>
    <fullName>contract_insurance__c</fullName>
    <description>磯兼</description>
    <label>契約損保</label>
    <length>255</length>
    <type>Text</type>
</CustomField>