force-app/main/default/objects/Case__c/fields/contributor__c.field-meta.xml
<CustomField>
    <fullName>contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>貢献者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>purchase_receptions</relationshipName>
    <type>Lookup</type>
</CustomField>