force-app/main/default/objects/Case__c/fields/ConveyCount__c.field-meta.xml
<CustomField>
    <fullName>ConveyCount__c</fullName>
    <formula>IF( OR( ISPICKVAL( VehicleClassification__c , &quot;はなまるオークション/他社AA（営業）&quot; ) , ISPICKVAL( VehicleClassification__c , &quot;営業A&quot; ) ) , IF( ISBLANK( ManagerContactDate__c ) , 0 , 1 ) , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取次カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>