force-app/main/default/objects/Case__c/fields/cooling__c.field-meta.xml
<CustomField>
    <fullName>cooling__c</fullName>
    <label>冷房（査定課）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>AAＣ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>