force-app/main/default/objects/Case__c/fields/CS_task__c.field-meta.xml
<CustomField>
    <fullName>CS_task__c</fullName>
    <description>喜多</description>
    <label>CSタスクメモ</label>
    <type>TextArea</type>
</CustomField>