force-app/main/default/objects/Case__c/fields/CS_task_deadline__c.field-meta.xml
<CustomField>
    <fullName>CS_task_deadline__c</fullName>
    <description>喜多</description>
    <formula>NOT( ISBLANK( CS_TaskDateTime__c ))</formula>
    <label>CSタスク期限有無</label>
    <type>Checkbox</type>
</CustomField>