force-app/main/default/objects/Case__c/fields/CS_Task_Person__c.field-meta.xml
<CustomField>
    <fullName>CS_Task_Person__c</fullName>
    <description>山本</description>
    <label>CSタスク担当者</label>
    <length>20</length>
    <type>Text</type>
</CustomField>