force-app/main/default/objects/Case__c/fields/CS_TaskDateTime__c.field-meta.xml
<CustomField>
    <fullName>CS_TaskDateTime__c</fullName>
    <description>山本</description>
    <label>CSタスク期限日</label>
    <type>Date</type>
</CustomField>