force-app/main/default/objects/Case__c/fields/CS_tasklist__c.field-meta.xml
<CustomField>
    <fullName>CS_tasklist__c</fullName>
    <description>山本</description>
    <label>旧_CSタスク</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>朝一確認</fullName>
            </value>
            <value>
                <fullName>トラブル・クレーム案件</fullName>
            </value>
            <value>
                <fullName>長期書類未着</fullName>
            </value>
            <value>
                <fullName>売契送信・3通目確認・直売→旧C変更</fullName>
            </value>
            <value>
                <fullName>書類発送</fullName>
            </value>
            <value>
                <fullName>至急随時</fullName>
            </value>
            <value>
                <fullName>架電系</fullName>
            </value>
            <value>
                <fullName>他部署確認中</fullName>
            </value>
            <value>
                <fullName>受付戻り・死亡書類確認</fullName>
            </value>
            <value>
                <fullName>販売タスク</fullName>
            </value>
            <value>
                <fullName>開封依頼＆追跡番号確認依頼</fullName>
            </value>
            <value>
                <fullName>MD＆LINE返信要or返信待ち</fullName>
            </value>
            <value>
                <fullName>後追い架電</fullName>
            </value>
            <value>
                <fullName>書類OK待ち（検収書・引き書・陸チャレetc）</fullName>
            </value>
            <value>
                <fullName>振込</fullName>
            </value>
            <value>
                <fullName>ナンバー後追い・その他</fullName>
            </value>
            <value>
                <fullName>S付進捗</fullName>
            </value>
            <value>
                <fullName>金額変更・各種キャンセル処理・台帳削除</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>