force-app/main/default/objects/Case__c/fields/DateCount_toClose__c.field-meta.xml
<CustomField>
    <fullName>DateCount_toClose__c</fullName>
    <formula>CompletionDate__c -  PurchaseDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所要日数（買取→全完了）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>