force-app/main/default/objects/Case__c/fields/DateCount_toContact__c.field-meta.xml
<CustomField>
    <fullName>DateCount_toContact__c</fullName>
    <formula>IF( ContactDate__c - DATEVALUE( ReceptionDateTime__c ) = 0 , &quot;当日&quot; , IF( ContactDate__c - DATEVALUE( ReceptionDateTime__c ) = 1 , &quot;翌日&quot; , IF( ContactDate__c - DATEVALUE( ReceptionDateTime__c ) &gt;= 2 , &quot;翌々日以降&quot; , &quot;&quot; )))</formula>
    <label>受付→接触</label>
    <type>Text</type>
</CustomField>