force-app/main/default/objects/Case__c/fields/DateCount_toPurchase__c.field-meta.xml
<CustomField>
    <fullName>DateCount_toPurchase__c</fullName>
    <formula>PurchaseDate__c - ContactDate__c</formula>
    <label>所要日数（接触→買取）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>