force-app/main/default/objects/Case__c/fields/DeliveryCompany__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCompany__c</fullName>
    <description>山本</description>
    <label>配達業者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ヤマト運輸</fullName>
            </value>
            <value>
                <fullName>佐川急便</fullName>
            </value>
            <value>
                <fullName>日本郵便</fullName>
            </value>
            <value>
                <fullName>西濃運輸</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>