force-app/main/default/objects/Case__c/fields/DeliverySource__c.field-meta.xml
<CustomField>
    <fullName>DeliverySource__c</fullName>
    <description>山本</description>
    <label>発送元</label>
    <type>TextArea</type>
</CustomField>