force-app/main/default/objects/Case__c/fields/Demolition_contractor__c.field-meta.xml
<CustomField>
    <fullName>Demolition_contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解体業者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Member__c.Demolition_contractor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>買取受付</relationshipLabel>
    <relationshipName>Case_member</relationshipName>
    <type>Lookup</type>
</CustomField>