force-app/main/default/objects/Case__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <label>出発地</label>
    <type>TextArea</type>
</CustomField>