force-app/main/default/objects/Case__c/fields/Desired_pickup_time__c.field-meta.xml
<CustomField>
    <fullName>Desired_pickup_time__c</fullName>
    <inlineHelpText>HH-HHの形式で入力してください。（例：09-18）</inlineHelpText>
    <label>引取希望時間帯</label>
    <length>50</length>
    <type>Text</type>
</CustomField>