force-app/main/default/objects/Case__c/fields/DesiredDeliverTime__c.field-meta.xml
<CustomField>
    <fullName>DesiredDeliverTime__c</fullName>
    <description>山本</description>
    <label>希望納期</label>
    <type>Date</type>
</CustomField>