force-app/main/default/objects/Case__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>目的地</label>
    <type>TextArea</type>
</CustomField>