force-app/main/default/objects/Case__c/fields/Dismantling_fee__c.field-meta.xml
<CustomField>
    <fullName>Dismantling_fee__c</fullName>
    <label>解体料金</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>