force-app/main/default/objects/Case__c/fields/DocMgmt_inquirydetail__c.field-meta.xml
<CustomField>
    <fullName>DocMgmt_inquirydetail__c</fullName>
    <description>書類管理からの問い合わせに使用。作成：山本</description>
    <label>問い合わせ詳細（書類管理）</label>
    <type>TextArea</type>
</CustomField>