force-app/main/default/objects/Case__c/fields/DocMgmt_Person__c.field-meta.xml
<CustomField>
    <fullName>DocMgmt_Person__c</fullName>
    <formula>TEXT( Oppotunity__r.DocMgmt_Person__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>書類管理担当者</label>
    <type>Text</type>
</CustomField>