force-app/main/default/objects/Case__c/fields/DocMgmtInquiry_Category__c.field-meta.xml
<CustomField>
    <fullName>DocMgmtInquiry_Category__c</fullName>
    <description>書類管理からの問い合わせ時に使用。種別。作成：山本</description>
    <label>依頼カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>書類不備</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>