force-app/main/default/objects/Case__c/fields/Document_collection_method__c.field-meta.xml
<CustomField>
    <fullName>Document_collection_method__c</fullName>
    <description>佐野</description>
    <label>書類回収方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>郵送回収</fullName>
            </value>
            <value>
                <fullName>現地回収</fullName>
            </value>
            <value>
                <fullName>現地回収(先郵送要)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>