force-app/main/default/objects/Case__c/fields/Document_Existence__c.field-meta.xml
<CustomField>
    <fullName>Document_Existence__c</fullName>
    <label>書類有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>書類あり</fullName>
            </value>
            <value>
                <fullName>書類なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>