force-app/main/default/objects/Case__c/fields/DocumentAttachmentShipping__c.field-meta.xml
<CustomField>
    <fullName>DocumentAttachmentShipping__c</fullName>
    <label>書類取付詳細</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>売買契約書</fullName>
            </value>
            <value>
                <fullName>委任状</fullName>
            </value>
            <value>
                <fullName>譲渡証明書</fullName>
            </value>
            <value>
                <fullName>申請依頼書</fullName>
            </value>
            <value>
                <fullName>理由書</fullName>
            </value>
            <value>
                <fullName>所有権解除依頼書</fullName>
            </value>
            <value>
                <fullName>還付委任状</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>