force-app/main/default/objects/Case__c/fields/DocumentAttachmentShipping_Free__c.field-meta.xml
<CustomField>
    <fullName>DocumentAttachmentShipping_Free__c</fullName>
    <label>書類手続き備考</label>
    <type>TextArea</type>
</CustomField>