force-app/main/default/objects/Case__c/fields/DocumentAttachmentShipping_Person__c.field-meta.xml
<CustomField>
    <fullName>DocumentAttachmentShipping_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類取付担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocumentAttachmentShipping_Case</relationshipName>
    <type>Lookup</type>
</CustomField>