force-app/main/default/objects/Case__c/fields/DocumentAttachmentShipping_Remarks__c.field-meta.xml
<CustomField>
    <fullName>DocumentAttachmentShipping_Remarks__c</fullName>
    <label>書類取付備考</label>
    <type>TextArea</type>
</CustomField>