force-app/main/default/objects/Case__c/fields/DocumentCompleteCheck__c.field-meta.xml
<CustomField>
    <fullName>DocumentCompleteCheck__c</fullName>
    <label>書類OK確認日</label>
    <type>Date</type>
</CustomField>