force-app/main/default/objects/Case__c/fields/DriveType__c.field-meta.xml
<CustomField>
    <fullName>DriveType__c</fullName>
    <label>駆動方式</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2WD</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>