force-app/main/default/objects/Case__c/fields/East_West__c.field-meta.xml
<CustomField>
    <fullName>East_West__c</fullName>
    <description>佐野
「コールセンターからの引継ぎ時に所有者へ通知」のフロー作成用</description>
    <formula>CASE( LocationAddress_State_hs__c ,
&quot;北海道&quot;, &quot;東日本&quot;,
&quot;青森県&quot;, &quot;東日本&quot;,
&quot;岩手県&quot;, &quot;東日本&quot;,
&quot;秋田県&quot;, &quot;東日本&quot;,
&quot;宮城県&quot;, &quot;東日本&quot;,
&quot;山形県&quot;, &quot;東日本&quot;,
&quot;福島県&quot;, &quot;東日本&quot;,
&quot;茨城県&quot;, &quot;東日本&quot;,
&quot;栃木県&quot;, &quot;東日本&quot;,
&quot;群馬県&quot;, &quot;東日本&quot;,
&quot;埼玉県&quot;, &quot;東日本&quot;,
&quot;千葉県&quot;, &quot;東日本&quot;,
&quot;東京都&quot;, &quot;東日本&quot;,
&quot;神奈川県&quot;, &quot;東日本&quot;,
&quot;新潟県&quot;, &quot;東日本&quot;,
&quot;富山県&quot;, &quot;東日本&quot;,
&quot;石川県&quot;, &quot;東日本&quot;,
&quot;福井県&quot;, &quot;東日本&quot;,
&quot;山梨県&quot;, &quot;東日本&quot;,
&quot;長野県&quot;, &quot;東日本&quot;,
&quot;岐阜県&quot;, &quot;西日本&quot;,
&quot;静岡県&quot;, &quot;東日本&quot;,
&quot;愛知県&quot;, &quot;西日本&quot;,
&quot;滋賀県&quot;, &quot;西日本&quot;,
&quot;三重県&quot;, &quot;西日本&quot;,
&quot;京都府&quot;, &quot;西日本&quot;,
&quot;大阪府&quot;, &quot;西日本&quot;,
&quot;奈良県&quot;, &quot;西日本&quot;,
&quot;和歌山県&quot;, &quot;西日本&quot;,
&quot;兵庫県&quot;, &quot;西日本&quot;,
&quot;鳥取県&quot;, &quot;西日本&quot;,
&quot;島根県&quot;, &quot;西日本&quot;,
&quot;岡山県&quot;, &quot;西日本&quot;,
&quot;広島県&quot;, &quot;西日本&quot;,
&quot;山口県&quot;, &quot;西日本&quot;,
&quot;徳島県&quot;, &quot;西日本&quot;,
&quot;香川県&quot;, &quot;西日本&quot;,
&quot;愛媛県&quot;, &quot;西日本&quot;,
&quot;高知県&quot;, &quot;西日本&quot;,
&quot;福岡県&quot;, &quot;西日本&quot;,
&quot;佐賀県&quot;, &quot;西日本&quot;,
&quot;長崎県&quot;, &quot;西日本&quot;,
&quot;大分県&quot;, &quot;西日本&quot;,
&quot;熊本県&quot;, &quot;西日本&quot;,
&quot;宮崎県&quot;, &quot;西日本&quot;,
&quot;鹿児島県&quot;, &quot;西日本&quot;,
&quot;沖縄県&quot;, &quot;西日本&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>東日本/西日本</label>
    <type>Text</type>
</CustomField>