force-app/main/default/objects/Case__c/fields/EasyToContact_Timezone_hs__c.field-meta.xml
<CustomField>
    <fullName>EasyToContact_Timezone_hs__c</fullName>
    <label>連絡のつきやすい時間帯</label>
    <type>TextArea</type>
</CustomField>