force-app/main/default/objects/Case__c/fields/EstimatedCeilingAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCeilingAmount__c</fullName>
    <description>佐野</description>
    <label>概算上限基準</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>以下</fullName>
            </value>
            <value>
                <fullName>前後</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>