force-app/main/default/objects/Case__c/fields/EstimatedLowerAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedLowerAmount__c</fullName>
    <description>佐野</description>
    <label>概算下限金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>