force-app/main/default/objects/Case__c/fields/EstimatedSMSsentdate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSMSsentdate__c</fullName>
    <description>山本</description>
    <label>概算SMS送信日</label>
    <type>Date</type>
</CustomField>