force-app/main/default/objects/Case__c/fields/etc_yard_um__c.field-meta.xml
<CustomField>
    <fullName>etc_yard_um__c</fullName>
    <formula>Demolition_contractor__r.etc_yard_um__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>別ヤード有無</label>
    <type>Text</type>
</CustomField>