force-app/main/default/objects/Case__c/fields/Expected_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Expected_Gross_Profit__c</fullName>
    <description>山本</description>
    <formula>Desired_amount_hs__c -  Amount__c</formula>
    <label>見込み粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>