force-app/main/default/objects/Case__c/fields/FirstCompanySalesA__c.field-meta.xml
<CustomField>
    <fullName>FirstCompanySalesA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野</description>
    <label>営業A 1社目</label>
    <type>Checkbox</type>
</CustomField>