force-app/main/default/objects/Case__c/fields/FirstRegistration_Month_hs__c.field-meta.xml
<CustomField>
    <fullName>FirstRegistration_Month_hs__c</fullName>
    <label>初年度月</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month</valueSetName>
    </valueSet>
</CustomField>