force-app/main/default/objects/Case__c/fields/FirstRegistration_Year_hs__c.field-meta.xml
<CustomField>
    <fullName>FirstRegistration_Year_hs__c</fullName>
    <label>初年度年　★</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Model_Year</valueSetName>
    </valueSet>
</CustomField>