force-app/main/default/objects/Case__c/fields/For_business__c.field-meta.xml
<CustomField>
    <fullName>For_business__c</fullName>
    <description>与儀</description>
    <label>事業用</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事業用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>