force-app/main/default/objects/Case__c/fields/Forwarding__c.field-meta.xml
<CustomField>
    <fullName>Forwarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>回送</label>
    <type>Checkbox</type>
</CustomField>