force-app/main/default/objects/Case__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>【Web】送信元フォーム</label>
    <length>255</length>
    <type>Text</type>
</CustomField>