force-app/main/default/objects/Case__c/fields/FrontAll__c.field-meta.xml
<CustomField>
    <fullName>FrontAll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>フロント全体　★</label>
    <type>Checkbox</type>
</CustomField>