force-app/main/default/objects/Case__c/fields/FrontLeftSide__c.field-meta.xml
<CustomField>
    <fullName>FrontLeftSide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>左前　★</label>
    <type>Checkbox</type>
</CustomField>