force-app/main/default/objects/Case__c/fields/FrontRightSide__c.field-meta.xml
<CustomField>
    <fullName>FrontRightSide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>右前　★</label>
    <type>Checkbox</type>
</CustomField>