force-app/main/default/objects/Case__c/fields/FrontUnderlay__c.field-meta.xml
<CustomField>
    <fullName>FrontUnderlay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>フロント全体：下打ち　★</label>
    <type>Checkbox</type>
</CustomField>