force-app/main/default/objects/Case__c/fields/ga_client_id__c.field-meta.xml
<CustomField>
    <fullName>ga_client_id__c</fullName>
    <description>Webから査定依頼が入ってきた際にGoogleAnalticsのIDが入る。山本</description>
    <label>GAクライアントID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>