force-app/main/default/objects/Case__c/fields/GenesysCloudPhone__c.field-meta.xml
<CustomField>
    <fullName>GenesysCloudPhone__c</fullName>
    <formula>IF ( ISBLANK(Account__r.MobilePhone__c) , Account__r.Phone, Account__r.MobilePhone__c)</formula>
    <label>【Genesys Cloud連携用】電話番号</label>
    <type>Text</type>
</CustomField>