force-app/main/default/objects/Case__c/fields/GenesysCloudReceptionDateTime__c.field-meta.xml
<CustomField>
    <fullName>GenesysCloudReceptionDateTime__c</fullName>
    <formula>SUBSTITUTE(MID(TEXT(ReceptionDateTime__c + (9/24)), 1,  LEN(TEXT(ReceptionDateTime__c + (9/24)))-4 ), &quot; &quot;, &quot;T&quot;) &amp; &quot;Z&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【GenesysCloud連携用】受付日時</label>
    <type>Text</type>
</CustomField>