force-app/main/default/objects/Case__c/fields/gift_sent_date__c.field-meta.xml
<CustomField>
    <fullName>gift_sent_date__c</fullName>
    <description>佐野</description>
    <label>ギフト送信日</label>
    <type>Date</type>
</CustomField>