force-app/main/default/objects/Case__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>グレード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>