force-app/main/default/objects/Case__c/fields/Grades__c.field-meta.xml
<CustomField>
    <fullName>Grades__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>グレード</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CarTypes__c</field>
            <operation>equals</operation>
            <valueField>Mst_Grades__c.model__c</valueField>
        </filterItems>
        <filterItems>
            <field>Mst_Grades__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Grades__c</referenceTo>
    <relationshipLabel>買取受付</relationshipLabel>
    <relationshipName>GradeUnderCustomCase</relationshipName>
    <type>Lookup</type>
</CustomField>